# talkboy

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
src/: cli.rs  config.rs  main.rs  playback.rs  proxy.rs
src/archive/: convert.rs  load.rs  mod.rs  store.rs
