[package]
name = "talkboy"
version = "0.1.0"
authors = ["Benn Sundsrud <benn.sundsrud@gmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/bsundsrud/talkboy"
description = "Utility for recording/playback of HTTP sessions"
edition = "2018"

[dependencies]
hyper = "0.12.24"
futures = "0.1.25"
tokio = "0.1.15"
har = "0.2.0"
lazy_static = "1.2.0"
failure = "0.1.5"
slog = { version = "2.4.1", features = [ "max_level_trace", "release_max_level_info" ] }
slog-term = "2.4.0"
slog-async = "2.3.0"
clap = "2.32.0"
hyper-rustls = "0.16.0"
chrono = "0.4.6"
cookie = "0.11.0"
base64 = "0.10.1"
serde = "1.0.87"
serde_derive = "1.0.87"
serde_json = "1.0.38"
sha2 = "0.8.0"
regex = "1.1.0"
toml = "0.4.10"
bytes = "0.4.11"